--- a/stem-explorer-ng/src/challenge/components/challenge-view/challenge-view.component.html
+++ b/stem-explorer-ng/src/challenge/components/challenge-view/challenge-view.component.html
@@ -1,77 +1,35 @@
-<div *ngIf="showBackButton" class="back-container" (click)="back()">
+<div class="back-container" (click)="toMap()">
   <div class="back-text" fxFlexLayout="row">
     <mat-icon>chevron_left</mat-icon>
-    Back
+    Back to map
   </div>
 </div>
 
-<div class="challenge-details" *ngIf="challenge$ | async; let challenge">
-  <mat-icon class="category-icon" [svgIcon]="CategoryIcons[challenge.category]"></mat-icon>
-
-  <div class="challenge-header">
-    <app-challenge-title [category]="challenge.category">
-      {{ challenge.title }}
-    </app-challenge-title>
+<div class="challenge--container" *ngIf="challenge$ | async; let challenge">
+  <div class="challenge--header">
+    <h2 [class]="Colour[challenge.category]">{{ challenge.title | uppercase }}</h2>
   </div>
-
-  <!-- <h4 id="top-element">{{ Categories[challenge.category] }}</h4>
-  <p>{{ challenge.description }}</p>
-
-  <div *ngIf="challenge.challengeLevels.length > 1" class="levels-wrapper">
-    <mat-select
-      [value]="selectedLevel.difficulty"
-      [class]="Colour[challenge.category]"
-      (selectionChange)="levelChange($event)"
-      aria-label="Select Level"
-    >
-      <mat-option *ngFor="let option of challenge.challengeLevels; trackBy: trackLevel" [value]="option.difficulty">
-        {{ Levels[option.difficulty] }}
-      </mat-option>
-    </mat-select>
-    <mat-icon class="arrow">expand_more</mat-icon>
-  </div>
-
-  <ng-container *ngIf="selectedLevel">
-    <h3 [class]="Colour[challenge.category]" class="instructions-header">Instructions</h3>
-    <p>{{ selectedLevel.instructions }}</p>
-    <span *ngIf="selectedLevel.instructionsImage">
-      <img class="image" [src]="selectedLevel.instructionsImage" />
-      <p class="small">{{ selectedLevel.instructionsImageHelperText }}</p>
-    </span>
-    <h4>Question</h4>
-    <p>{{ selectedLevel.questionText }}</p>
-    <span *ngIf="selectedLevel.questionImage">
-      <img class="image" [src]="selectedLevel.questionImage" />
-      <p class="small">{{ selectedLevel.questionImageHelperText }}</p>
-    </span>
-  </ng-container>
-
-  <iframe
-    *ngIf="selectedLevel.videoEmbedUrl"
-    class="level-video"
-    width="560"
-    height="315"
-    [src]="selectedLevel.videoEmbedUrl"
-    allowfullscreen
-  ></iframe>
 
   <h3 [class]="Colour[challenge.category] + ' center'" *ngIf="levelCompleted">
     Awesome work! You've completed this level!
   </h3>
 
-  <app-button
-    [category]="challenge.category"
-    (click)="enterAnswer()"
-    aria-label="Answer here"
-    [value]="'Enter Answer'"
-  ></app-button>
-  <app-button
-    *ngIf="selectedLevel.hint"
-    color="pink"
-    (click)="getHint()"
-    aria-label="Get hint"
-    [value]="'Get Hint'"
-  ></app-button> -->
+  <div class="challenge--question-container">
+    <mat-icon class="category-icon" [svgIcon]="CategoryIcons[challenge.category]"></mat-icon>
+    <p>{{ challenge.question }}</p>
+  </div>
+
+  <div class="challenge--answer-list" [class]="Colour[challenge.category]">
+    <ng-container *ngFor="let option of challenge.possibleAnswers; let i = index">
+      <button mat-flat-button (click)="enterAnswer(option, challenge)" class="answer">
+        <span [class]="Colour[challenge.category]">{{ i + 1 }}.</span> {{ option.label }}
+      </button>
+    </ng-container>
+  </div>
+
+  <div class="challenge--hint">
+    <button mat-flat-button class="pink">Need help? Get a Hint</button>
+  </div>
 </div>
 
 <ng-template #loading>
