--- a/stem-explorer-ng/src/challenge/components/result-dialog/result-dialog.component.html
+++ b/stem-explorer-ng/src/challenge/components/result-dialog/result-dialog.component.html
@@ -1,11 +1,8 @@
 <app-dialog inverted [category]="data.isCorrect ? data.category : ''">
   <h3>{{ data.title }}</h3>
-  <h4>{{ Levels[data.difficulty] }}</h4>
 
   <div class="message" *ngIf="data.isCorrect; else incorrectMessage">
-    <mat-icon class="graphic">
-      done_outline
-    </mat-icon>
+    <mat-icon class="graphic"> done_outline </mat-icon>
     <h3 class="text">
       {{ message }}
     </h3>
@@ -13,33 +10,23 @@
 
   <ng-template #incorrectMessage>
     <div class="message">
-      <mat-icon class="graphic">
-        close
-      </mat-icon>
+      <mat-icon class="graphic"> close </mat-icon>
       <h3 class="text">
         {{ message }}
       </h3>
     </div>
   </ng-template>
 
-  <button mat-flat-button *ngIf="!data.isCorrect" mat-dialog-close="try-again"
-    [class]="cssClass">Try Again</button>
+  <button mat-flat-button *ngIf="!data.isCorrect" mat-dialog-close="try-again" [class]="cssClass">Try Again</button>
 
   <ng-container *ngIf="auth.user$ | async; else guest">
-    <button mat-flat-button
-      mat-dialog-close="next-level"
-      [class]="cssClass"
-      *ngIf="!data.hasNext"
-    >Next Level</button>
     <h3 *ngIf="data.hasNext && data.isCorrect" class="challenge-complete">You have completed this challenge</h3>
   </ng-container>
 
-  <button mat-flat-button mat-dialog-close (click)="toHome()"
-  [class]="cssClass">Back to Home</button>
+  <button mat-flat-button mat-dialog-close (click)="openCamera()" [class]="cssClass">Scan your next challenge!</button>
 
   <ng-template #guest>
-    <button mat-flat-button
-      mat-dialog-close [class]="cssClass" (click)="toLogin()">
+    <button mat-flat-button mat-dialog-close [class]="cssClass" (click)="toLogin()">
       Register or Login to save your progress
     </button>
   </ng-template>
