--- a/stem-explorer-ng/src/app/shared/components/form-field/form-field.component.scss
+++ b/stem-explorer-ng/src/app/shared/components/form-field/form-field.component.scss
@@ -1,4 +1,4 @@
-@use 'src/app/styles/variables' as *;
+@use "src/app/styles/variables" as *;
 
 :host {
   display: block;
@@ -41,5 +41,5 @@
 }
 
 :host > .pink {
-  @include coloured-field($secondary-pink);
+  @include coloured-field($secondary-pink-400);
 }
