--- a/stem-explorer-ng/src/app/styles/_select.scss
+++ b/stem-explorer-ng/src/app/styles/_select.scss
@@ -1,12 +1,12 @@
-@import './variables';
-@import './mixins';
+@import "./variables";
+@import "./mixins";
 
 mat-select {
   color: #fff;
   background-color: tint(80%, $primary-black);
   padding: 1rem;
   font-weight: 100;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
   .mat-select-arrow-wrapper {
     visibility: hidden;
@@ -30,5 +30,5 @@ mat-select.purple {
 }
 
 mat-select.pink {
-  @include coloured-select-field($secondary-pink);
+  @include coloured-select-field($secondary-pink-400);
 }
