--- a/stem-explorer-ng/src/app/core/components/toolbar/toolbar.component.html
+++ b/stem-explorer-ng/src/app/core/components/toolbar/toolbar.component.html
@@ -1,30 +1,22 @@
 <mat-toolbar>
-  
-  <button mat-icon-button (click)="drawer.toggle()" aria-label="Navigation">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-  
   <span class="fill-remaining-space">
-  <img src="../../../assets/logo.png" aria-label="STEM Wana Trust" class="logo" (click)="navigateToHome()"/>
+    <img
+      src="../../../assets/logo.png"
+      aria-label="STEM Wana Trust"
+      class="logo"
+    />
   </span>
-  
-  <button mat-flat-button
-    class="pink log-in"
-    *ngIf="(auth.user$ | async) === null; else loggedInBlock"
-    (click)="navigateToLogin()"
-    aria-label="Log in">Log In</button>
-  
-  <ng-template #loggedInBlock>
-    <button mat-icon-button [matMenuTriggerFor]="profileMenu">
-      <img class="profile-pic" *ngIf="photoURL; else noPhoto" [src]="photoURL" alt="profile picture">
-      <ng-template #noPhoto>
-        <mat-icon class="profile-icon">account_circle</mat-icon>
-      </ng-template>
-    </button>
-  
-    <mat-menu #profileMenu="matMenu">
-      <button mat-menu-item (click)="navigateToProfile()" aria-label="Edit Profile">Edit Profile</button>
-      <button mat-menu-item (click)="logout()" aria-label="Log out">Log Out</button>
-    </mat-menu>
-  </ng-template>
+
+  <!-- <span>
+    <div class="pie-wrapper" [class]="'progress-' + percentage">
+      <span class="label" [ngClass]="{ 'no-progress': percentage === 0 }">
+        {{ progress$ | async }}
+      </span>
+      <div class="pie">
+        <div class="left-side half-circle"></div>
+        <div class="right-side half-circle"></div>
+      </div>
+      <div class="shadow"></div>
+    </div>
+  </span> -->
 </mat-toolbar>
