--- a/stem-explorer-ng/src/app/shared/components/dialog/dialog.component.scss
+++ b/stem-explorer-ng/src/app/shared/components/dialog/dialog.component.scss
@@ -1,73 +1,72 @@
-@use 'src/app/styles/variables' as *;
+@use "src/app/styles/variables" as *;
 
 .mat-dialog-content {
-    border-radius: 0;
-    border-width: 3px;
-    border-style: solid;
-    padding: 20px;
-    border-color: white;
-    min-width: 200px;
+  border-radius: 0;
+  border-width: 3px;
+  border-style: solid;
+  padding: 20px;
+  border-color: white;
+  min-width: 200px;
 }
 
 .close-button {
-    background-color: white;
-    border-radius: 50%;
-    height: 30px;
-    width: 30px;
-    line-height: 30px;
-    position: absolute;
-    display: block;
-    right: -12px;
-    top: 12px;
-    z-index: 99; /* fixes close button on ios */
+  background-color: white;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  line-height: 30px;
+  position: absolute;
+  display: block;
+  right: -12px;
+  top: 12px;
+  z-index: 99; /* fixes close button on ios */
 
-    &.inverted {
-        visibility: hidden;
-    }
+  &.inverted {
+    visibility: hidden;
+  }
 
-    @media only screen and (max-width: 315px) {
-        visibility: hidden;
-    }
+  @media only screen and (max-width: 315px) {
+    visibility: hidden;
+  }
 }
 
 .mat-icon-button ::ng-deep .mat-button-focus-overlay {
-    display: none;
+  display: none;
 }
 
 .dialog-position {
-    position: relative;
+  position: relative;
 }
 
 @mixin coloured-dialog($color) {
-    border-color: $color;
+  border-color: $color;
 
-    &.inverted {
-        background-color: $color;
-        color: white;
-    }
+  &.inverted {
+    background-color: $color;
+    color: white;
+  }
 }
 
 .mat-dialog-content.green {
-    @include coloured-dialog($primary-green)
+  @include coloured-dialog($primary-green);
 }
 
 .mat-dialog-content.blue {
-    @include coloured-dialog($primary-blue)
+  @include coloured-dialog($primary-blue);
 }
 
 .mat-dialog-content.orange {
-    @include coloured-dialog($primary-orange)
+  @include coloured-dialog($primary-orange);
 }
 
 .mat-dialog-content.purple {
-    @include coloured-dialog($primary-purple)
+  @include coloured-dialog($primary-purple);
 }
 
 .mat-dialog-content.pink {
-    @include coloured-dialog($secondary-pink)
+  @include coloured-dialog($secondary-pink-400);
 }
 
 .mat-dialog-content.red {
-    @include coloured-dialog($secondary-red)
+  @include coloured-dialog($secondary-red);
 }
-
