--- a/stem-explorer-ng/src/app/styles/_button.scss
+++ b/stem-explorer-ng/src/app/styles/_button.scss
@@ -1,24 +1,24 @@
-@import './mixins';
-@import './variables';
+@import "./mixins";
+@import "./variables";
 
 button.green {
-  @include coloured-button($primary-green)
+  @include coloured-button($primary-green);
 }
 
 button.blue {
-  @include coloured-button($primary-blue)
+  @include coloured-button($primary-blue);
 }
 
 button.orange {
-  @include coloured-button($primary-orange)
+  @include coloured-button($primary-orange);
 }
 
 button.purple {
-  @include coloured-button($primary-purple)
+  @include coloured-button($primary-purple);
 }
 
 button.pink {
-  @include coloured-button($secondary-pink)
+  @include coloured-button($secondary-pink-400);
 }
 
 button.mat-flat-button {
@@ -30,7 +30,7 @@ button.mat-flat-button {
   font-weight: bold;
   text-align: center;
   margin-top: 15px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !important;
 
   &:disabled {
     border: none;
