--- a/stem-explorer-ng/src/challenge/components/hint-dialog/hint-dialog.component.html
+++ b/stem-explorer-ng/src/challenge/components/hint-dialog/hint-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog">
-  <span class="material-icons dialog-close"> close </span>
+  <span class="material-icons dialog-close" mat-dialog-close> close </span>
 
   <header class="dialog--header">
     <h2 [class]="Colour[data.category]">
