--- a/stem-explorer-ng/src/app/components/splash-screen/splash-screen.component.html
+++ b/stem-explorer-ng/src/app/components/splash-screen/splash-screen.component.html
@@ -1,4 +1,4 @@
-<app-dialog>
+<!-- <app-dialog>
   <h2>{{ title }}</h2>
   <img src="/assets/youthdev_-_splash_screen.gif" />
   <p>{{ content }}</p>
@@ -7,4 +7,4 @@
   <span class="TnCs">.</span>
   <br />
   <app-button mat-dialog-close colour="pink" [value]="buttonText"></app-button>
-</app-dialog>
+</app-dialog> -->
