--- a/stem-explorer-ng/src/app/containers/featured-locations/featured-locations.component.html
+++ b/stem-explorer-ng/src/app/containers/featured-locations/featured-locations.component.html
@@ -1,4 +1,4 @@
-<h1>Featured Locations</h1>
+<!-- <h1>Featured Locations</h1>
 
 <div class="location" *ngFor="let location of locations">
   <h2>{{ location.name }}</h2>
@@ -8,4 +8,4 @@
   <h3>Exclusive offer</h3>
   <p>{{ location.offerText }}</p>
   <app-button *ngIf="location.link" value="Visit Website" (click)="visitWebsite(location)"></app-button>
-</div>
+</div> -->
