--- a/stem-explorer-ng/src/app/containers/login-page/login-page.component.html
+++ b/stem-explorer-ng/src/app/containers/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="email-register-fields">
+<!-- <div class="email-register-fields">
   <div class="auth-button-group" fxLayout="column">
     <button mat-raised-button (click)="auth.googleSignin()" class="auth-button">
       <mat-icon svgIcon="google-login"></mat-icon>
@@ -32,4 +32,4 @@
     <span class="forgot" (click)="forgotPassword()"> Forgot Password </span>
     <button mat-raised-button class="auth-button" (click)="navigateToRegister()">Don't have an account? Signup!</button>
   </div>
-</div>
+</div> -->
