--- a/stem-explorer-ng/src/app/containers/profile/profile.component.html
+++ b/stem-explorer-ng/src/app/containers/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="profile-fields">
+<!-- <div class="profile-fields">
   <h3 class="title">Edit Your Explorer Profile</h3>
 
   <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
@@ -68,4 +68,4 @@
   <div class="option-group" fxLayout="column">
     <span class="skip" (click)="toMap()"> Take me to the map! </span>
   </div>
-</div>
+</div> -->
