--- a/stem-explorer-ng/src/app/containers/register-page/register-page.component.html
+++ b/stem-explorer-ng/src/app/containers/register-page/register-page.component.html
@@ -1,4 +1,4 @@
-<div class="email-register-fields">
+<!-- <div class="email-register-fields">
   <div class="auth-button-group" fxLayout="column">
     <button mat-raised-button (click)="auth.googleSignin()" class="auth-button">
       <mat-icon svgIcon="google-login"></mat-icon>
@@ -40,4 +40,4 @@
   <div class="auth-button-group" fxLayout="column">
     <button mat-raised-button class="auth-button" (click)="goToLogin()">Already have an account? Login!</button>
   </div>
-</div>
+</div> -->
