--- a/stem-explorer-ng/src/app/app.component.html
+++ b/stem-explorer-ng/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-toolbar [drawer]="drawer"></app-toolbar>
+<app-toolbar></app-toolbar>
 <app-progress-bar></app-progress-bar>
 <div class="background-image full-height">
   <router-outlet></router-outlet>
