--- a/stem-explorer-ng/src/app/containers/forgot-password/forgot-password.component.html
+++ b/stem-explorer-ng/src/app/containers/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="email-register-fields">
+<!-- <div class="email-register-fields">
   <div class="auth-button-group">
     <button mat-raised-button class="auth-button" (click)="toLogin()">Back to Login</button>
   </div>
@@ -24,4 +24,4 @@
 
     <app-button colour="pink" [value]="'Go to Map'" (click)="toMap()"></app-button>
   </div>
-</div>
+</div> -->
